fix: add z-index in modal

--- a/shelter/assets/css/base.css
+++ b/shelter/assets/css/base.css
@@ -91,7 +91,7 @@ a {
 .modal {
     display: none;
     position: fixed;
-    z-index: 10;
+    z-index: 100;
     left: 0;
     top: 0;
     right: 0;
